# kaede

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
assets/: kaede.ai
src/kaede/: __init__.py  common.py  constants.py  huffman.py  ip.py  models.py  process.py  protocol.py  url.py  websocket.py
src/kaede/api/: __init__.py  client.py  models.py  server.py
src/kaede/dns/: __init__.py  errors.py  models.py  records.py
src/kaede/dns/api/: __init__.py  client.py  common.py  server.py
src/kaede/dns/helpers/: __init__.py  dnssec.py
src/kaede/dns/protocol/: __init__.py  base.py  common.py  handler.py  https.py  quic.py  tcp.py  tls.py  udp.py
src/kaede/handler/: __init__.py  common.py  tcp.py  tls.py  tls_transport.py
src/kaede/http/: __init__.py  client.py  cookies.py  date.py  errors.py  fields.py  finalizer.py  h1.py  h2.py  h3.py  headers.py  models.py  qpack.py  responses.py  server.py  structured.py  websocket.py
src/kaede/http/api/: client.py  common.py  server.py
src/kaede/http/helpers/: compression.py  dns.py  hpack.py  hsts.py  qpack.py
src/kaede/http/protocol/: __init__.py  base.py  common.py  connection.py  h1.py  h2.py  h3.py  handler.py
src/kaede/imap/api/: common.py  server.py
src/kaede/ip/: __init__.py  models.py
src/kaede/quic/: __init__.py  connection.py  crypto.py  errors.py  frame.py  models.py  packet.py  protocol.py  recovery.py  stream.py  tls.py
src/kaede/tcp/: __init__.py  errors.py  models.py  protocol.py  tls.py
src/kaede/tls/: __init__.py  errors.py  models.py  openssl.py  quic_tls.py  record.py
src/kaede/udp/: __init__.py  errors.py  models.py  protocol.py  tls.py
src/kaede/uds/: __init__.py  errors.py  models.py  protocol.py
tests/: conftest.py  test_0rtt.py  test_client_config.py  test_conditional.py  test_cookies.py  test_dns_codec.py  test_dns_dnssec.py  test_dns_do53.py  test_dns_doh.py  test_dns_presentation.py  test_dns_secure.py  test_dtls_engine.py  test_fields.py  test_fuzzing.py  test_h1.py  test_h1_e2e.py  test_h2.py  test_h2_e2e.py  test_h2_static.py  test_h3.py  test_h3_e2e.py  test_h3_static.py  test_h3_websocket.py  test_handler_common.py  test_headers.py  test_http_compression.py  test_http_date.py  test_http_discovery.py  test_http_framing.py  test_http_h1.py  test_http_h2.py  test_http_h3.py  test_http_h3_control.py  test_http_headers.py  test_http_hpack.py  test_http_hsts.py  test_http_message.py  test_http_qpack.py  test_http_websocket.py  test_http_websocket_close.py  (+46 more)
(+24 files in other folders)
