[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-kaede"
version = "2.1.0"
description = "Python Library for Processing HTTP Request/Response"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "h2",
    "cryptography",
    "uvloop",
    "async-lru",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "zstandard",
    "brotlicffi"
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
GitHub = "https://github.com/nercone-rear/kaede/"

[tool.uv.build-backend]
module-name = "kaede"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
