[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[project]
name = "nercone-kaede"
version = "4.0.0"
description = "Python Library for Processing Generally used Protocols"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "uvloop",
    "pydantic",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "xxhash",
    "zstandard",
    "brotlicffi"
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
GitHub = "https://github.com/nercone-rear/kaede/"

[tool.uv.build-backend]
module-name = "kaede"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
